ella-parser/src/parser/snapshots/ella_parser__parser__stmt__tests__block-stmt-nested.snap
---
source: ella-parser/src/parser/stmt.rs
expression: "stmt(\"{ 1; 2; { 3; } }\")"
---
Block(
    [
        ExprStmt(
            NumberLit(
                1.0,
            ),
        ),
        ExprStmt(
            NumberLit(
                2.0,
            ),
        ),
        Block(
            [
                ExprStmt(
                    NumberLit(
                        3.0,
                    ),
                ),
            ],
        ),
    ],
)
