ella-parser/src/parser/snapshots/ella_parser__parser__stmt__tests__block-stmt.snap
---
source: ella-parser/src/parser/stmt.rs
expression: "stmt(\"{ 1; }\")"
---
Block(
    [
        ExprStmt(
            NumberLit(
                1.0,
            ),
        ),
    ],
)
