ella-parser/src/parser/snapshots/ella_parser__parser__stmt__tests__fn-declaration-with-params.snap
---
source: ella-parser/src/parser/stmt.rs
expression: "stmt(\"fn foo(a, b, c) {}\")"
---
FnDeclaration {
    ident: "foo",
    params: [
        "a",
        "b",
        "c",
    ],
    body: [],
}
