ella-parser/src/parser/snapshots/ella_parser__parser__stmt__tests__fn-declaration.snap
---
source: ella-parser/src/parser/stmt.rs
expression: "stmt(\"fn foo() {}\")"
---
FnDeclaration {
    ident: "foo",
    params: [],
    body: [],
}
