ella-parser/src/parser/snapshots/ella_parser__parser__stmt__tests__if-else-stmt-empty.snap
---
source: ella-parser/src/parser/stmt.rs
expression: "stmt(r#\"if condition {} else {}\"#)"
---
IfElseStmt {
    condition: Identifier(
        "condition",
    ),
    if_block: [],
    else_block: Some(
        [],
    ),
}
