ella-parser/src/parser/snapshots/ella_parser__parser__stmt__tests__let-declaration-with-expr.snap
---
source: ella-parser/src/parser/stmt.rs
expression: "stmt(\"let x = 1 + 2;\")"
---
LetDeclaration {
    ident: "x",
    initializer: Binary {
        lhs: NumberLit(
            1.0,
        ),
        op: Plus,
        rhs: NumberLit(
            2.0,
        ),
    },
}
