ella-parser/src/parser/snapshots/ella_parser__parser__stmt__tests__let-declaration.snap
---
source: ella-parser/src/parser/stmt.rs
expression: "stmt(\"let x = 2;\")"
---
LetDeclaration {
    meta: DeclarationMeta {
        is_captured_in_closure: false,
    },
    ident: "x",
    initializer: NumberLit(
        2.0,
    ),
}
