ella-parser/src/parser/snapshots/ella_parser__parser__stmt__tests__return-stmt-with-expr.snap
---
source: ella-parser/src/parser/stmt.rs
expression: "stmt(\"return 1 + 2;\")"
---
ReturnStmt(
    Binary {
        lhs: NumberLit(
            1.0,
        ),
        op: Plus,
        rhs: NumberLit(
            2.0,
        ),
    },
)
