ella-parser/src/parser/snapshots/ella_parser__parser__stmt__tests__while-stmt-empty.snap
---
source: ella-parser/src/parser/stmt.rs
expression: "stmt(r#\"while true {}\"#)"
---
WhileStmt {
    condition: BoolLit(
        true,
    ),
    body: [],
}
